# creditlens

./: .gitignore  Dockerfile  README.md  main.py  mlflow.db  pyproject.toml
dags/: credit_default_pipeline.py
docs/: eu_ai_act_compliance.md
models/: best_model.pkl  best_model_20260427_174503.pkl  best_model_20260427_175126.pkl  best_model_20260509_134248.pkl  best_model_20260509_145634.pkl
notebooks/: xgboost_uci_credit.ipynb
scripts/: generate_drift_report.py  train_all_mlflow.py
src/api/: __init__.py
src/data/: load.py
src/models/: evaluate.py  explain.py  train.py
